fix(ui): wrong nav collapse, js import errors, hamburger icon

--- a/public/style.css
+++ b/public/style.css
@@ -28,4 +28,8 @@ pre.form-data {
 .center {
   margin: 0 auto;
   width: 80%;
-} */
+}
+
+label {
+  font-size: larger;
+}
